update tree, add notify

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.1, minimum-scale=0.1, maximum-scale=5, user-scalable=yes">
     <!-- You can add more metadata, links to stylesheets, or scripts here -->
 </head>
 <body>
@@ -29,6 +29,9 @@
         <div class="row"> 
             <a href="svg/" class="clickable-div"><img src="svg/svg.png">BSP to SVG</a>
             <a href="https://servers.quakeone.com" class="clickable-div"><img src="gamespy.png" alt="Gamespy Image">Servers List</a>
+            <a href="notify/" class="clickable-div"><img src="notify/notify.png">Player Notify</a>
+        </div>
+        <div class="row">
             <a href="tree/" class="clickable-div"><img src="tree/treelogo.png" alt="Quake Tree Image">Quake Tree</a>
         </div>
         <!-- Add more .row as needed -->
