--- a/tree/index.html
+++ b/tree/index.html
@@ -434,7 +434,8 @@ const DATA = {
                 }
               ]
             },
-            { name: "FortressOne", url: "https://www.fortressone.org/" }
+            { name: "FortressOne", url: "https://www.fortressone.org/" },
+            { name: "fteqw-mguns", url: "https://github.com/Iceman12k/fteqw-mguns" }
           ]
         },
         { name: "Twilight", url: "https://github.com/luaman/twilight" },
