--- a/pak/index.html
+++ b/pak/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=0.1, minimum-scale=0.1, maximum-scale=5, user-scalable=yes">
     <title>PAK File Tool</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
@@ -13,25 +13,25 @@
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.3.0/model-viewer.min.js"></script>
     <!-- QuakeWebTools https://github.com/andyp123/quake_web_tools -->
     <!--lib-->
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/lib/stats.min.js"></script>
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/lib/DataStream.js"></script>
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/lib/three.js"></script>
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/lib/orbitcontrols.js"></script>
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/lib/firstpersoncontrols.js"></script>
+    <script src="QuakeWebTools/scripts/lib/stats.min.js"></script>
+    <script src="QuakeWebTools/scripts/lib/DataStream.js"></script>
+    <script src="QuakeWebTools/scripts/lib/three.js"></script>
+    <script src="QuakeWebTools/scripts/lib/orbitcontrols.js"></script>
+    <script src="QuakeWebTools/scripts/lib/firstpersoncontrols.js"></script>
     <!--util-->
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/util/filemanager.js"></script>
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/util/fileutil.js"></script>
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/util/imageutil.js"></script>
+    <script src="QuakeWebTools/scripts/util/filemanager.js"></script>
+    <script src="QuakeWebTools/scripts/util/fileutil.js"></script>
+    <script src="QuakeWebTools/scripts/util/imageutil.js"></script>
     <!--types-->
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/types/pak.js"></script>
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/types/wad.js"></script>
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/types/pal.js"></script>
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/types/lmp.js"></script>
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/types/spr.js"></script>
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/types/bsp.js"></script>
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/types/mdl.js"></script>
+    <script src="QuakeWebTools/scripts/types/pak.js"></script>
+    <script src="QuakeWebTools/scripts/types/wad.js"></script>
+    <script src="QuakeWebTools/scripts/types/pal.js"></script>
+    <script src="QuakeWebTools/scripts/types/lmp.js"></script>
+    <script src="QuakeWebTools/scripts/types/spr.js"></script>
+    <script src="QuakeWebTools/scripts/types/bsp.js"></script>
+    <script src="QuakeWebTools/scripts/types/mdl.js"></script>
     <!--application-->
-    <script src="https://qssm.quakeone.com/pak/QuakeWebTools/scripts/quakewebtools.js"></script>
+    <script src="QuakeWebTools/scripts/quakewebtools.js"></script>
 </head>
 
 <body onload="app_init()"> <!--app_init() for QWT -->
